--- a/index.html
+++ b/index.html
@@ -51,16 +51,6 @@
         justify-content: center;
       }
 
-      .info {
-        position: relative;
-        z-index: 2;
-        color: #fff;
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
       .temp {
         display: flex;
         align-items: center;
@@ -143,13 +133,55 @@
 
       .col-md-6 {
         width: 50%;
-        float: left; /* This helps in achieving side-by-side layout */
+        float: left; 
       }
 
       .gas-icon {
         height: 25px;
         width: 25px;
       }
+
+
+      @media screen and (max-width: 600px) {
+        body {
+        padding: 20px 0;
+      }
+
+      #card {
+        width: 440px;
+        margin-left: 6%;
+        margin-top: 6%;
+      }
+
+      .title {
+        font-size: large;
+      }
+
+      .title h1 {
+        margin-top: 30px;
+        margin-bottom: 20px;
+      }
+
+      .temp-value {
+        margin-left: 60px;
+      }
+
+      .temp-icon img {
+        margin-left: 145px;
+      }
+
+      .wind {
+        font-size: 16px;
+        margin-left: 165px;
+        margin-top: 5px;
+      }
+
+      .temp-heading {
+        margin-left: 53px;
+        font-size: 11px;
+      }
+    }
+
     </style>
   </head>
   <body>
