--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
 
       #card {
         width: 364px;
-        margin-left: 4%;
+        display: flex;
+        justify-content: center;
         margin-top: 6%;
       }
 
