--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       #card {
         width: 364px;
         display: flex;
-        justify-content: center;
+        margin-left: auto;
         margin-top: 6%;
       }
 
