--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
       #card {
         width: 364px;
         margin-left: auto;
+        margin-right: auto;
         margin-top: 6%;
       }
 
